tests/macros/password/extension.stderr
error: option `extension` does not exist for kind `password`
 --> $DIR/extension.rs:2:46
  |
2 |     let q = discourse::questions![Password { extension: todo!() }];
  |                                              ^^^^^^^^^
