tests/macros/password/extension.rs
fn main() {
    let q = discourse::questions![Password { extension: todo!() }];
}
